# Market-Researcher---Crew-AI

./: .gitignore  README.md  docker-compose.langfuse.yml
.github/workflows/: deploy-backend-fly.yml  deploy-frontend.yml
frontend/: .env  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppShell.tsx  LoadingIndicator.tsx  PremiumUpsellModal.tsx  ResearchProgressPanel.tsx  ResearchRunViews.tsx
frontend/src/data/: mockStocks.ts  sectorTileThemes.ts  sectors.ts
frontend/src/hooks/: useTrack.ts
frontend/src/lib/: config.ts
frontend/src/pages/: AdminAnalyticsPage.tsx  DashboardPage.tsx  HistoryDetailPage.tsx  HistoryPage.tsx  LoginPage.tsx  SectorsPage.tsx  TrackRecordPage.tsx  UpgradePage.tsx
frontend/src/routes/: IndexRedirect.tsx  ProtectedRoute.tsx  UnauthorizedBridge.tsx
frontend/src/session/: ActiveResearchRunContext.tsx  storage.ts  (+3 more)
market_researcher/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_observability.py  fly.toml  investment_report.json  pyproject.toml
market_researcher/src/market_researcher/: api.py  crew.py  db.py  main.py  observability.py  schemas.py  showcase_crew.py
market_researcher/src/market_researcher/config/: agents.yaml  showcase_agents.yaml  showcase_tasks.yaml  tasks.yaml
market_researcher/src/market_researcher/services/: dashboard_service.py  pdf_service.py  price_service.py  report_parse.py  research_jobs.py  research_service.py  showcase_service.py
