[project]
name = "market-researcher"
version = "0.1.0"
description = "Market researcher — multi-agent CrewAI pipeline for sector research"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.11.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyjwt[crypto]>=2.9.0",
    # Track record: stock price history
    "yfinance>=0.2.50",
    # PDF export — xhtml2pdf is pure Python, no system libs required (works on Windows)
    "xhtml2pdf>=0.2.16",
    "markdown>=3.7",
]

[project.scripts]
market_researcher = "market_researcher.main:run"
run_crew = "market_researcher.main:run"
train = "market_researcher.main:train"
replay = "market_researcher.main:replay"
test = "market_researcher.main:test"
run_with_trigger = "market_researcher.main:run_with_trigger"
market_researcher_api = "market_researcher.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_researcher"]

[tool.crewai]
type = "crew"

[tool.uv]
required-environments = [
"sys_platform == 'win32' and platform_machine == 'AMD64'",
]
